# file-brain

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  docker-compose.dev.yml  main.py  package-lock.json  package.json  pyproject.toml
api/: configuration.py  (+4 more)
apps/file-brain/: .env.example  MANIFEST.in  README.md  alembic.ini  build.py  docker-compose.yml  main.py  pyproject.toml
apps/file-brain/api/: configuration.py  crawler.py  system.py  system_stream.py
apps/file-brain/api/models/: __init__.py  crawler.py  file_event.py  operations.py
apps/file-brain/api/v1/: router.py
apps/file-brain/api/v1/endpoints/: crawler.py  files.py  fs.py  settings.py  stats_extended.py  system.py  system_stream.py  watch_paths.py  wizard.py
apps/file-brain/config/: settings.py  typesense_schema.py
apps/file-brain/core/: __init__.py  app_info.py  config.py  exceptions.py  factory.py  frontend.py  initialization.py  logging.py  paths.py  typesense_schema.py
apps/file-brain/database/: __init__.py
apps/file-brain/database/models/: __init__.py  base.py  crawler_state.py  setting.py  watch_path.py  wizard_state.py
apps/file-brain/database/repositories/: __init__.py  base.py  crawler_state.py  settings.py  watch_path.py  wizard_state_repository.py
apps/file-brain/file_brain/: docker-compose.gpu.yml  docker-compose.yml  main.py
apps/file-brain/file_brain/api/models/: crawler.py
apps/file-brain/file_brain/api/v1/: router.py
apps/file-brain/file_brain/api/v1/endpoints/: config.py  crawler.py  files.py  preview.py  settings.py  stats_extended.py  system.py  system_stream.py  watch_paths.py  wizard.py
apps/file-brain/file_brain/core/: app_info.py  config.py  exceptions.py  frontend.py  initialization.py  telemetry.py  typesense_schema.py
apps/file-brain/file_brain/database/models/: watch_path.py
apps/file-brain/file_brain/database/repositories/: watch_path.py  wizard_state_repository.py
apps/file-brain/file_brain/lib/: flaskwebgui.py
apps/file-brain/file_brain/services/: database_migrations.py  docker_manager.py  model_downloader.py  ocrmypdf_service.py  service_manager.py  startup_checker.py  thumbnail.py  typesense_client.py
apps/file-brain/file_brain/services/crawler/: discoverer.py  indexer.py  manager.py  monitor.py  stoppable.py  verification.py
apps/file-brain/file_brain/services/extraction/: __init__.py  archive_strategy.py  basic_strategy.py  exceptions.py  extractor.py  tika_strategy.py
apps/file-brain/file_brain/utils/: gpu_detector.py  windows_thumbnail.py
apps/file-brain/frontend/: index.html  package-lock.json  package.json  vite.config.ts
apps/file-brain/frontend/src/: App.tsx  index.css  main.tsx
apps/file-brain/frontend/src/api/: client.ts
apps/file-brain/frontend/src/components/: FileContextMenu.tsx  FileInteractionHit.tsx  FolderSelectModal.tsx  Header.tsx  HeroStats.tsx  IndexManagementSidebar.tsx  InitializationOverlay.tsx  InitializationStatusBar.tsx  InitializationWizard.tsx  MainContent.tsx  PreviewSidebar.tsx  ResultsGrid.tsx  ServiceLogsViewer.tsx  ServiceStatusCard.tsx  SettingsDialog.tsx  StatusBar.tsx  ThemeSwitcher.tsx  WatchedFoldersSidebar.tsx
apps/file-brain/frontend/src/components/common/: FileItem.tsx  FileThumbnail.tsx
apps/file-brain/frontend/src/components/container/: ContainerInitOverlay.tsx
apps/file-brain/frontend/src/components/dashboard/: FileTypeChart.tsx  FileTypeDrillDown.tsx  HeroStats.tsx  IndexStorageCard.tsx  IndexingActivityChart.tsx  RecentFilesList.tsx  chartPlugins.ts
apps/file-brain/frontend/src/context/: PostHogProvider.tsx  SearchContext.tsx  StatusContext.tsx  ThemeContext.tsx
apps/file-brain/frontend/src/hooks/: useFileOperations.ts
apps/file-brain/frontend/src/layout/: AppShell.tsx
apps/file-brain/frontend/src/pages/: SearchPage.tsx  SettingsPage.tsx
apps/file-brain/frontend/src/services/: fileOperations.ts
apps/file-brain/frontend/src/utils/: fileUtils.ts
apps/file-brain/migrations/: env.py
apps/file-brain/migrations/versions/: 5186177178db_initial_migration.py  f45fbcb8dbb4_add_file_type_filter_to_watch_paths.py
apps/file-brain/services/: archive_extractor.py  crawl_job_manager.py  database_service.py  docker_manager.py  extractor.py  model_downloader.py  service_manager.py  typesense_client.py  watcher.py
apps/file-brain/services/crawler/: __init__.py  discoverer.py  indexer.py  manager.py  monitor.py  progress.py  queue.py  verification.py
apps/file-brain/services/extraction/: __init__.py  archive_strategy.py  basic_strategy.py  extractor.py  protocol.py  tika_strategy.py
apps/file-brain/tests/: conftest.py  test_database_migrations_api.py
apps/file-brain/tests/api/: test_preview_api.py  test_settings_api.py  test_watch_paths_api.py
apps/file-brain/tests/unit/: test_chunker.py  test_extraction.py  test_gpu_detector.py  test_logging_and_version.py  test_path_utils.py  test_settings_repository.py  test_startup_checker.py  test_telemetry.py  test_thumbnail_service.py  test_watch_path_repository.py  test_wizard_reset.py  test_wizard_state_repository.py
apps/file-brain/utils/: app_info.py
(+94 files in other folders)
